[package]
name = "pngtuber-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cpal = "0.15.3"
eframe = { version = "0.30.0", default-features = false, features = ["default_fonts", "glow", "x11"] }
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["image"] }
thiserror = "2.0.11"
